--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,25 @@
+# Java bytecode
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Eclipse
+.classpath
+.project
+.settings/**
+
+# idea
+*.iml
+*.idea
+
+# VIM
+*.swp
+*~
 
 # Package Files #
 *.jar
 *.war
 *.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+
+# Maven
+target/**
+
