--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,23 @@
     </build>
 
         <dependencies>
-            <!--            
+            <!--
+            <dependency>
+                <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+                <artifactId>de.tudarmstadt.ukp.dkpro.core.tokit-asl</artifactId>
+                <version>1.6.0</version>
+            </dependency>
+            <dependency>
+                <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+                <artifactId>de.tudarmstadt.ukp.dkpro.core.io.text-asl</artifactId>
+                <version>1.6.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+                <artifactId>de.tudarmstadt.ukp.dkpro.core.opennlp-asl</artifactId>
+                <version>1.6.0</version>
+            </dependency>
             <dependency>
                 <groupId>com.aliasi</groupId>
                 <artifactId>lingpipe</artifactId>
@@ -68,8 +84,7 @@
             <dependency>
                 <groupId>edu.stanford.nlp</groupId>
                 <artifactId>stanford-corenlp</artifactId>
-                <version>3.3.1</version>
-                <classifier>models</classifier>
+                <version>3.3.0</version>
             </dependency>
             <dependency>
                 <groupId>ch.zhaw.mapreduce</groupId>
@@ -85,12 +100,6 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.11</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jmock</groupId>
-                <artifactId>jmock-junit4</artifactId>
-                <version>2.6.0</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
