--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             </dependency>
             -->
             <dependency>
+                <groupId>net.sf.opencsv</groupId>
+                <artifactId>opencsv</artifactId>
+                <version>2.0</version>
+            </dependency>
+            <dependency>
                 <groupId>edu.stanford.nlp</groupId>
                 <artifactId>stanford-corenlp</artifactId>
                 <version>3.3.0</version>
