--- a/pom.xml
+++ b/pom.xml
@@ -1,58 +1,58 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>ch.zhaw</groupId>
-    <artifactId>parallelComputing</artifactId>
-    <version>0.1-SNAPSHOT</version>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>ch.zhaw</groupId>
+  <artifactId>parallelComputing</artifactId>
+  <version>0.1-SNAPSHOT</version>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>ch.zhaw.parallelComputing.controller.ProjectLauncher</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.5.2</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>ch.zhaw.parallelComputing.controller.ProjectLauncher</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
-        <dependencies>
-            <!--
+  <dependencies>
+    <!--
             <dependency>
                 <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
                 <artifactId>de.tudarmstadt.ukp.dkpro.core.tokit-asl</artifactId>
@@ -82,31 +82,37 @@
             </dependency>
             -->
             <dependency>
-                <groupId>net.sf.opencsv</groupId>
-                <artifactId>opencsv</artifactId>
-                <version>2.0</version>
+              <groupId>net.sf.opencsv</groupId>
+              <artifactId>opencsv</artifactId>
+              <version>2.0</version>
             </dependency>
             <dependency>
-                <groupId>edu.stanford.nlp</groupId>
-                <artifactId>stanford-corenlp</artifactId>
-                <version>3.3.0</version>
+              <groupId>edu.stanford.nlp</groupId>
+              <artifactId>stanford-corenlp</artifactId>
+              <version>3.3.1</version>
             </dependency>
             <dependency>
-                <groupId>ch.zhaw.mapreduce</groupId>
-                <artifactId>mapreduce-api</artifactId>
-                <version>1.4-SNAPSHOT</version>
+              <groupId>edu.stanford.nlp</groupId>
+              <artifactId>stanford-corenlp</artifactId>
+              <version>3.3.1</version>
+              <classifier>models</classifier>
             </dependency>
             <dependency>
-                <groupId>ch.zhaw.mapreduce</groupId>
-                <artifactId>mapreduce-master</artifactId>
-                <version>1.4-SNAPSHOT</version>
+              <groupId>ch.zhaw.mapreduce</groupId>
+              <artifactId>mapreduce-api</artifactId>
+              <version>1.4-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.11</version>
-                <scope>test</scope>
+              <groupId>ch.zhaw.mapreduce</groupId>
+              <artifactId>mapreduce-master</artifactId>
+              <version>1.4-SNAPSHOT</version>
             </dependency>
-        </dependencies>
-</project>
+            <dependency>
+              <groupId>junit</groupId>
+              <artifactId>junit</artifactId>
+              <version>4.11</version>
+              <scope>test</scope>
+            </dependency>
+          </dependencies>
+        </project>
 
