--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -8,3 +8,11 @@ offset=50
 
 # Logfile - if not given the log is TSD + log.txt
 logfile=log.txt
+
+# Show the log in a standalone console window
+# If not the log is only written to the given log file
+window=false
+
+# Contribute workers
+# Allows you to contribute own threads for working - or not
+contribute=true
