cleanup and FileIterator bugfix

--- a/logging.properties
+++ b/logging.properties
@@ -1,4 +1,4 @@
-ch.zhaw.level=ALL
+ch.zhaw.level=INFO
 ch.zhaw.handlers=java.util.logging.ConsoleHandler
 java.util.logging.ConsoleHandler.level=INFO
 
