--- a/mapreduce.properties
+++ b/mapreduce.properties
@@ -1,4 +1,4 @@
-plugins=Socket
+plugins=Socket,Thread
 
 # -----------------------------------------------------------------------------
 # Thread Plugin
