GUI for Computation

--- a/logging.properties
+++ b/logging.properties
@@ -1,4 +1,4 @@
-ch.zhaw.level=INFO
+ch.zhaw.level=FINER
 ch.zhaw.handlers=java.util.logging.ConsoleHandler
 java.util.logging.ConsoleHandler.level=INFO
 
