--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -11,4 +11,4 @@ logfile=log.txt
 
 # Show the log in a standalone console window
 # If not the log is only written to the given log file
-window=false
+#window=false
