lots of properties - application can be run from console again

--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -3,12 +3,35 @@
 # Path of the input data
 path=raw.csv
 
-# Number of tweets per MAP task
-offset=50
+# file for part results while the computation
+partResultPath=Sentiments.csv
+
+# Output file of the sentiment analysis
+outputPath=result.csv
+
+#File that the output should be compared with
+comparisonPath=compare.csv
 
 # Logfile - if not given the log is TSD + log.txt
 logfile=log.txt
 
+# Number of tweets per MAP task
+offset=50
+
 # Show the log in a standalone console window
 # If not the log is only written to the given log file
 #window=false
+
+# The timestamp for the key of the MAP Job may be transformed
+# to be comparable to what ever you want to compare it to
+inputDateFormat ="EEE, dd MMM yyyy HH:mm:ss Z"
+outputDateFormat ="yyyy-MM-dd-HH.mm"
+
+# ID of the key of the MAP job
+tweetTimestampID=81
+
+# ID of the text for sentiment analysis
+tweetTextID=18
+
+# IDs for part result logging
+partResultLogIDs=23,81,18,17
