properties are failsave now

--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -24,8 +24,8 @@ offset=50
 
 # The timestamp for the key of the MAP Job may be transformed
 # to be comparable to what ever you want to compare it to
-inputDateFormat ="EEE, dd MMM yyyy HH:mm:ss Z"
-outputDateFormat ="yyyy-MM-dd-HH.mm"
+inputDateFormat =EEE, dd MMM yyyy HH:mm:ss Z
+outputDateFormat =yyyy-MM-dd-HH.mm
 
 # ID of the key of the MAP job
 tweetTimestampID=81
@@ -34,4 +34,4 @@ tweetTimestampID=81
 tweetTextID=18
 
 # IDs for part result logging
-partResultLogIDs=23,81,18,17
+#partResultLogIDs=23,81,18,17
