running without GUI up and working again

--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -3,9 +3,6 @@
 # Path of the input data
 path=raw.csv
 
-# file for part results while the computation
-partResultPath=Sentiments.csv
-
 # Output file of the sentiment analysis
 outputPath=result.csv
 
@@ -20,7 +17,7 @@ offset=50
 
 # Show the log in a standalone console window
 # If not the log is only written to the given log file
-#window=false
+window=false
 
 # The timestamp for the key of the MAP Job may be transformed
 # to be comparable to what ever you want to compare it to
@@ -32,6 +29,12 @@ tweetTimestampID=81
 
 # ID of the text for sentiment analysis
 tweetTextID=18
+
+# part results
+# -----------------------------------------------------------------------------
+
+# file for part results while the computation
+partResultPath=sentiments.csv
 
 # IDs for part result logging
 #partResultLogIDs=23,81,18,17
