--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -17,7 +17,7 @@ offset=50
 
 # Show the log in a standalone console window
 # If not the log is only written to the given log file
-window=false
+#window=false
 
 # The timestamp for the key of the MAP Job may be transformed
 # to be comparable to what ever you want to compare it to
