fields for comparison can be selected now

--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -1,13 +1,11 @@
 # Config file for the application
 # -----------------------------------------------------------------------------
-# Path of the input data
-path=raw.csv
+
+# general properties
+# -----------------------------------------------------------------------------
 
 # Output file of the sentiment analysis
 outputPath=result.csv
-
-#File that the output should be compared with
-comparisonPath=compare.csv
 
 # Logfile - if not given the log is TSD + log.txt
 logfile=log.txt
@@ -19,6 +17,12 @@ offset=50
 # If not the log is only written to the given log file
 #window=false
 
+# input file
+# -----------------------------------------------------------------------------
+
+# Path of the input data
+inputPath=raw.csv
+
 # The timestamp for the key of the MAP Job may be transformed
 # to be comparable to what ever you want to compare it to
 inputDateFormat =EEE, dd MMM yyyy HH:mm:ss Z
@@ -29,6 +33,17 @@ tweetTimestampID=81
 
 # ID of the text for sentiment analysis
 tweetTextID=18
+
+# comparison file
+# -----------------------------------------------------------------------------
+
+#File that the output should be compared with
+comparisonPath=compare.csv
+
+# ID of the comparison files timestamp
+comparisonTSD=0
+# ID of the comparison files value
+comparisonValue=1
 
 # part results
 # -----------------------------------------------------------------------------
