getting rid of the anoying coreNLP System.error() logs"

--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -15,7 +15,7 @@ offset=50
 
 # Show the log in a standalone console window
 # If not the log is only written to the given log file
-#window=false
+window=false
 
 # input file
 # -----------------------------------------------------------------------------
@@ -26,6 +26,7 @@ inputPath=raw.csv
 # The timestamp for the key of the MAP Job may be transformed
 # to be comparable to what ever you want to compare it to
 inputDateFormat =EEE, dd MMM yyyy HH:mm:ss Z
+#inputDateFormat =EEE MMM dd HH:mm:ss zzz yyyy
 outputDateFormat =yyyy-MM-dd-HH.mm
 
 # ID of the key of the MAP job
@@ -49,7 +50,7 @@ comparisonValue=1
 # -----------------------------------------------------------------------------
 
 # file for part results while the computation
-partResultPath=sentiments.csv
+#partResultPath=sentiments.csv
 
 # IDs for part result logging
 #partResultLogIDs=23,81,18,17
