--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -25,6 +25,7 @@ inputPath=raw.csv
 
 # The timestamp for the key of the MAP Job may be transformed
 # to be comparable to what ever you want to compare it to
+# e.g. Sat, 24 May 2014 11:44:57 +0000
 inputDateFormat =EEE, dd MMM yyyy HH:mm:ss Z
 #inputDateFormat =EEE MMM dd HH:mm:ss zzz yyyy
 outputDateFormat =yyyy-MM-dd-HH.mm
