--- a/mapreduce.properties
+++ b/mapreduce.properties
@@ -1,8 +1,8 @@
 #plugins=Socket
-plugins=Socket,Thread
+plugins=Thread
 
 # -----------------------------------------------------------------------------
 # Thread Plugin
 
 # Number of threads contributed as workers
-nThreadWorkers=50
+nThreadWorkers=10
