--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -11,11 +11,11 @@ outputPath=result.csv
 logfile=log.txt
 
 # Number of tweets per MAP task
-offset=20
+offset=100
 
 # Show the log in a standalone console window
 # If not the log is only written to the given log file
-#window=false
+window=false
 
 # input file
 # -----------------------------------------------------------------------------
