--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -8,10 +8,10 @@
 outputPath=result.csv
 
 # Logfile - if not given the log is TSD + log.txt
-logfile=log.txt
+logfile=log.log
 
 # Number of tweets per MAP task
-offset=10
+offset=11
 
 # Show the log in a standalone console window
 # If not the log is only written to the given log file
@@ -27,7 +27,7 @@ inputPath=raw.csv
 # e.g. Sat, 24 May 2014 11:44:57 +0000
 inputDateFormat =EEE, dd MMM yyyy HH:mm:ss Z
 #inputDateFormat =EEE MMM dd HH:mm:ss zzz yyyy
-outputDateFormat =yyyy-MM-dd-HH.mm
+outputDateFormat =yyyy-MM-dd-HH:mm
 
 # ID of the key of the MAP job
 tweetTimestampID=81
@@ -45,6 +45,8 @@ comparisonPath=compare.csv
 comparisonTSD=0
 # ID of the comparison files value
 comparisonValue=1
+# format of the output dialogs timestamp
+comparisonDateFormat=yyyy-MM-dd-HH:mm
 
 # part results
 # -----------------------------------------------------------------------------
