--- a/mapreduce.properties
+++ b/mapreduce.properties
@@ -1,7 +1,9 @@
+# Possible Plugins for computing
 #plugins=Socket
-plugins=Thread
+#plugins=Thread
+plugins=Socket,Thread
 
-# -----------------------------------------------------------------------------
+# ---------------------------------------------------------
 # Thread Plugin
 
 # Number of threads contributed as workers
