defaults are bad! removed default date in MAP

--- a/parallelComputing.properties
+++ b/parallelComputing.properties
@@ -26,13 +26,13 @@ inputPath=raw.csv
 # e.g. Sat, 24 May 2014 11:44:57 +0000
 inputDateFormat =EEE, dd MMM yyyy HH:mm:ss Z
 #inputDateFormat =EEE MMM dd HH:mm:ss zzz yyyy
-outputDateFormat =yyyy-MM-dd-HH:mm
+outputDateFormat =yyyy-MM-dd-HH:m
 
 # ID of the key of the MAP job
-tweetTimestampID=81
+tweetTimestampID=83
 
 # ID of the text for sentiment analysis
-tweetTextID=18
+tweetTextID=19
 
 # comparison file
 # ---------------------------------------------------------
@@ -44,7 +44,7 @@ comparisonTSD=0
 # ID of the comparison files value
 comparisonValue=1
 # format of the output dialogs timestamp
-comparisonDateFormat=yyyy-MM-dd-HH:mm
+comparisonDateFormat=yyyy-MM-dd-HH:m
 
 # part results
 # ---------------------------------------------------------
