same iterator can be used multiole times with a new file

--- a/mapreduce.properties
+++ b/mapreduce.properties
@@ -1,7 +1,7 @@
 # Possible Plugins for computing
-#plugins=Socket
+plugins=Socket
 #plugins=Thread
-plugins=Socket,Thread
+#plugins=Socket,Thread
 
 # ---------------------------------------------------------
 # Thread Plugin
