--- a/mapreduce.properties
+++ b/mapreduce.properties
@@ -1,10 +1,10 @@
 # Possible Plugins for computing
-plugins=Socket
+#plugins=Socket
 #plugins=Thread
-#plugins=Socket,Thread
+plugins=Socket,Thread
 
 # ---------------------------------------------------------
 # Thread Plugin
 
 # Number of threads contributed as workers
-nThreadWorkers=5
+nThreadWorkers=1
